# ark

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
adr/: ADR-001-design-philosophy.md  ADR-002-priority-ordering.md  ADR-003-schema-driven-artifact-types.md  ADR-004-serde-yml-serialization.md  ADR-005-file-based-locking.md  ADR-006-scan-cross-project-aggregation.md  ADR-007-lifecycle-hooks.md  ADR-008-frontmatter-pipeline.md
backlog/: BL-001-enum-validation-on-kind-flag-for-new-edit.md  BL-002-add-kind-to-new-edit-for-the-type-schema-field.md  BL-003-integration-test-coverage-for-edge-cases.md  BL-004-guinea-pig-test-feedback-incorporation.md  BL-005-create-github-repo-milesmcleod-ark.md  BL-005-validate-set-values-against-schema.md  BL-006-validate-required-fields-on-ark-new.md  BL-007-parent-directory-walk-for-ark-discovery.md  BL-008-no-op-edit-should-not-bump-updated-date.md  BL-009-filter-warns-on-invalid-enum-values.md  BL-010-case-insensitive-search-flag.md  BL-011-archived-items-not-editable-via-ark-edit.md  BL-012-set-flag-overrides-named-flags-silently.md  BL-013-arkignore-support-for-scan.md  BL-014-ark-relate-cross-references-in-frontmatter.md  BL-015-ark-context-gather-related-artifacts-for-an-item.md  BL-016-ark-stale-detect-inactive-artifacts-via-git-log.md  BL-017-ark-diff-semantic-diff-between-git-refs.md  BL-018-schema-inheritance-via-extends-field.md  BL-019-schema-registry-remote-schema-references.md  (+3 more)
src/: artifact.rs  (+8 more)
(+64 files in other folders)
