[package]
name = "ark"
version = "0.4.0"
edition = "2024"
description = "Human-legible, agent-optimized project artifact management"
license = "MIT"
repository = "https://github.com/milesmcleod/ark"
readme = "README.md"
keywords = ["cli", "project-management", "markdown", "artifacts"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
globset = "0.4"
gray_matter = "0.3"
jsonschema = "0.28"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
